# crypto_deep_research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: protect-files.ps1
crypto_deep_research/: __init__.py  __main__.py  serve_worker.py  wiring.py
crypto_deep_research/contracts/: __init__.py  a2a.py  artifact.py  mcp_tools.py  memory.py  report.py
crypto_deep_research/mcp_server/: __init__.py  __main__.py  server.py
crypto_deep_research/memory/: __init__.py  episodic.py  longterm.py  working.py
crypto_deep_research/orchestrator/: app.py  dispatch.py  planner.py  synthesize.py
crypto_deep_research/workers/: __init__.py  base.py
docs/: ARCHITECTURE-MAP.md  DESIGN.md  TECH-CHOICES.md
docs/learning/: contracts.md  mcp-server.md  memory.md  orchestrator.md  wiring-cli.md  workers.md
docs/reviews/: 01-contracts.md  02-mcp-server.md  03-orchestrator.md  04-workers.md  05-memory.md  06-wiring-cli-packaging.md  README.md
docs/specs/: M0-M5-vertical-slice-epic.md
tests/: conftest.py  test_a2a_market.py  test_contracts.py  test_db_topology.py  test_episodic_roundtrip.py  test_fanout.py  test_isolation.py  test_longterm_affects_plan.py  test_longterm_memory.py  test_market_worker.py  test_mcp_server.py  test_onchain_worker.py  test_orderbook_worker.py  test_partial.py  test_planner_longterm_read.py  test_sentiment_worker.py  test_source_swap.py  test_timeout.py  test_wiring.py  test_zero_artifact.py
(+26 files in other folders)
